# ndn-iot-package-over-posix

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  QR_encoder.py  README.md  README.rst  ndn-lite-binding.i  ndn-lite.h  tutorial_shared_info.txt
CMakeInputs/: adaptation.cmake  app-support.cmake  encode.cmake  examples.cmake  forwarder.cmake  ndnlite.cmake  security.cmake  unittest.cmake  util.cmake
adaptation/: adapt-consts.h  ndn-lite.c
adaptation/security/: ndn-lite-rng-posix-crypto-impl.c  ndn-lite-rng-posix-crypto-impl.h
adaptation/udp/: udp-face.c
adaptation/udp-multicast/: ndn-udp-multicast-face.c  ndn-udp-multicast-face.h
adaptation/udp-unicast/: ndn-udp-unicast-face.c  ndn-udp-unicast-face.h
adaptation/unix-socket/: unix-face.c  unix-face.h
benchmarks/: latency-plot.py  plot-v.py
benchmarks/bootstrapping/: corei7-4770HQ-2.2GHz.txt  cortex-A53-ARMv8-1.4GHz.txt  plot.py
benchmarks/pub-sub/: corei7-4770HQ-2.2GHz.txt  cortex-A53-ARMv8-1.4GHz.txt  plot.py
devices/: tutorial_shared_info-24777.txt  tutorial_shared_info-398.txt  tutorial_shared_info-63884.txt
docs/: Doxyfile  conf.py  drafts.md  index.rst  requirements.txt
docs/src/: application.rst  authors.rst  examples.rst  install.rst  overview.rst  shared-secrets-gen.rst  tasks.rst  tutorial.rst
docs/src/spec/: pub-sub.rst  spec.rst  trust-policy.rst
example/: access-control-consumer.c  access-control-controller.c  access-control-producer.c
examples/: access-control-consumer.c  access-control-controller.c  access-control-producer.c  app-template.c  bootstrap.c  deamon-producer.c  example_instruction.md  file-transfer-client.c  file-transfer-server.c  iot-light.c  name-tree-test.c  ndn-lite-sd-peer.c  ndn-putchunks.c  nfd-basic-consumer.c  nfd-basic-producer.c  pub-cmd-dummy.c  pub-dummy.c  pub-sub-consumer.c  pub-sub-peer-1.c  pub-sub-peer-2.c  pub-sub-producer.c  py-udp-basic-producer.py  sub-cmd-dummy.c  sub-dummy.c  test-repo.c  tutorial-app-sub.c  tutorial-app.c  tutorial-gen-new-shared-info.c  udp-basic-consumer.c  udp-basic-producer.c  udp-group-consumer.c  udp-group-producer.c
examples/door-lock/: device-lock.c  device-presence.c  lock-it-when-i-leave.c
examples/smart-nightlight/: bootstrap-helper.h  device-illuminance.c  device-light.c  device-motion.c  services.h  smart-nightlight-hub.c
examples/st-device/: st-example.c
fake-riot-header/: msg.h  shell.h
legacy-docs/: drafts.md
wrapper/: ndnlite-wrapper.i
